sdk-docs_versioned_docs/version-20.0.x/enums/Generated/Types/AssetTx/AssetTx.md
---
id: "AssetTx"
title: "Enumeration: AssetTx"
sidebar_label: "AssetTx"
---

[generated/types](../../../../modules/Generated/Types/Types.md).AssetTx

## Enumeration Members

### AcceptAssetOwnershipTransfer

• **AcceptAssetOwnershipTransfer** = ``"asset.acceptAssetOwnershipTransfer"``

#### Defined in

[generated/types.ts:499](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L499)

___

### AcceptTickerTransfer

• **AcceptTickerTransfer** = ``"asset.acceptTickerTransfer"``

#### Defined in

[generated/types.ts:498](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L498)

___

### AddDocuments

• **AddDocuments** = ``"asset.addDocuments"``

#### Defined in

[generated/types.ts:507](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L507)

___

### ClaimClassicTicker

• **ClaimClassicTicker** = ``"asset.claimClassicTicker"``

#### Defined in

[generated/types.ts:511](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L511)

___

### ControllerTransfer

• **ControllerTransfer** = ``"asset.controllerTransfer"``

#### Defined in

[generated/types.ts:513](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L513)

___

### CreateAsset

• **CreateAsset** = ``"asset.createAsset"``

#### Defined in

[generated/types.ts:500](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L500)

___

### CreateAssetWithCustomType

• **CreateAssetWithCustomType** = ``"asset.createAssetWithCustomType"``

#### Defined in

[generated/types.ts:515](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L515)

___

### Freeze

• **Freeze** = ``"asset.freeze"``

#### Defined in

[generated/types.ts:501](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L501)

___

### Issue

• **Issue** = ``"asset.issue"``

#### Defined in

[generated/types.ts:504](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L504)

___

### MakeDivisible

• **MakeDivisible** = ``"asset.makeDivisible"``

#### Defined in

[generated/types.ts:506](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L506)

___

### Redeem

• **Redeem** = ``"asset.redeem"``

#### Defined in

[generated/types.ts:505](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L505)

___

### RedeemFromPortfolio

• **RedeemFromPortfolio** = ``"asset.redeemFromPortfolio"``

#### Defined in

[generated/types.ts:521](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L521)

___

### RegisterAndSetLocalAssetMetadata

• **RegisterAndSetLocalAssetMetadata** = ``"asset.registerAndSetLocalAssetMetadata"``

#### Defined in

[generated/types.ts:518](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L518)

___

### RegisterAssetMetadataGlobalType

• **RegisterAssetMetadataGlobalType** = ``"asset.registerAssetMetadataGlobalType"``

#### Defined in

[generated/types.ts:520](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L520)

___

### RegisterAssetMetadataLocalType

• **RegisterAssetMetadataLocalType** = ``"asset.registerAssetMetadataLocalType"``

#### Defined in

[generated/types.ts:519](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L519)

___

### RegisterCustomAssetType

• **RegisterCustomAssetType** = ``"asset.registerCustomAssetType"``

#### Defined in

[generated/types.ts:514](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L514)

___

### RegisterTicker

• **RegisterTicker** = ``"asset.registerTicker"``

#### Defined in

[generated/types.ts:497](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L497)

___

### RemoveDocuments

• **RemoveDocuments** = ``"asset.removeDocuments"``

#### Defined in

[generated/types.ts:508](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L508)

___

### RemoveLocalMetadataKey

• **RemoveLocalMetadataKey** = ``"asset.removeLocalMetadataKey"``

#### Defined in

[generated/types.ts:523](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L523)

___

### RemoveMetadataValue

• **RemoveMetadataValue** = ``"asset.removeMetadataValue"``

#### Defined in

[generated/types.ts:524](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L524)

___

### RenameAsset

• **RenameAsset** = ``"asset.renameAsset"``

#### Defined in

[generated/types.ts:503](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L503)

___

### ReserveClassicTicker

• **ReserveClassicTicker** = ``"asset.reserveClassicTicker"``

#### Defined in

[generated/types.ts:512](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L512)

___

### SetAssetMetadata

• **SetAssetMetadata** = ``"asset.setAssetMetadata"``

#### Defined in

[generated/types.ts:516](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L516)

___

### SetAssetMetadataDetails

• **SetAssetMetadataDetails** = ``"asset.setAssetMetadataDetails"``

#### Defined in

[generated/types.ts:517](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L517)

___

### SetFundingRound

• **SetFundingRound** = ``"asset.setFundingRound"``

#### Defined in

[generated/types.ts:509](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L509)

___

### Unfreeze

• **Unfreeze** = ``"asset.unfreeze"``

#### Defined in

[generated/types.ts:502](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L502)

___

### UpdateAssetType

• **UpdateAssetType** = ``"asset.updateAssetType"``

#### Defined in

[generated/types.ts:522](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L522)

___

### UpdateIdentifiers

• **UpdateIdentifiers** = ``"asset.updateIdentifiers"``

#### Defined in

[generated/types.ts:510](https://github.com/PolymeshAssociation/polymesh-sdk/blob/91c2d2d8/src/generated/types.ts#L510)
